[project]
name = "vnpy_esunny"
version = "1.0.2.2.6"
description = "Esunny gateway for VeighNa quant trading framework."
readme = "README.md"
license-files = ["LICENSE"]
authors = [{name = "Xiaoyou Chen", email = "xiaoyou.chen@mail.vnpy.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: Implementation :: CPython",
    # "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
]
requires-python = ">=3.10"
dependencies = ["vnpy>=3.0.0"]
keywords = ["quant", "quantitative", "investment", "trading", "algotrading", "esunny"]

[project.urls]
"Homepage" = "https://www.vnpy.com"
"Documentation" = "https://www.vnpy.com/docs"
"Forum" = "https://www.vnpy.com/forum"

[build-system]
requires = ["pybind11", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vnpy_esunny*"]
exclude = ["script*"]

[tool.ruff]
target-version = "py310"
output-format = "full"

[tool.ruff.lint]
select = ["B", "E", "F", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
